[gd_scene load_steps=16 format=3 uid="uid://dnxcrvnkj7fhj"]

[ext_resource type="Script" uid="uid://bcc6p35abs4l0" path="res://Objects/WorldObjects/RespawnPoint/respawn_point.gd" id="1_243ru"]
[ext_resource type="Texture2D" uid="uid://brhtxo8usdckp" path="res://Assets/Sprites/WorldObjects/RespawnPoint.png" id="2_ah0xh"]
[ext_resource type="Script" uid="uid://bttd2vrppvy4q" path="res://Levels/TestLevels/camera_2d.gd" id="3_7208j"]
[ext_resource type="PackedScene" uid="uid://brujq4dkn34nd" path="res://Components/ProximityAreaComponent/proximity_area.tscn" id="4_n8gbg"]
[ext_resource type="PackedScene" uid="uid://bqpjlvli0ayt1" path="res://Components/InteractableComponent/interactable_area.tscn" id="5_vnoj7"]

[sub_resource type="Animation" id="Animation_ah0xh"]
resource_name = "CreateRespawn"
length = 2.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.103017, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Platform/PlatformShape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PointLight2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_n8gbg"]
resource_name = "Idle"
length = 1.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 24, 25, 26, 27, 28, 29]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Platform/PlatformShape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PointLight2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_vnoj7"]
resource_name = "NewDroid"
length = 1.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"createPlayer"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera2D:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Platform/PlatformShape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PointLight2D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Camera2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.998918),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -2)]
}

[sub_resource type="Animation" id="Animation_7208j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Platform/PlatformShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PointLight2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Camera2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ebs5g"]
_data = {
&"CreateRespawn": SubResource("Animation_ah0xh"),
&"Idle": SubResource("Animation_n8gbg"),
&"NewDroid": SubResource("Animation_vnoj7"),
&"RESET": SubResource("Animation_7208j")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_vnoj7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vnoj7"]
size = Vector2(4, 4)

[sub_resource type="Gradient" id="Gradient_huiik"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.200811, 0.600406, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.170203, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vnoj7"]
gradient = SubResource("Gradient_huiik")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.8, 0.8)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ebs5g"]
gradient = SubResource("Gradient_huiik")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.8, 0.8)

[node name="RespawnPoint" type="Node2D" node_paths=PackedStringArray("spawnLocation")]
script = ExtResource("1_243ru")
spawnLocation = NodePath("SpawnLocation")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -9)
texture = ExtResource("2_ah0xh")
hframes = 41

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ebs5g")
}

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
enabled = false
zoom = Vector2(10, 10)
script = ExtResource("3_7208j")

[node name="CameraBounds" parent="." instance=ExtResource("4_n8gbg")]
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraBounds"]
visible = false
shape = SubResource("CircleShape2D_vnoj7")

[node name="InteractableArea" parent="." node_paths=PackedStringArray("textPos", "colShape") instance=ExtResource("5_vnoj7")]
unique_name_in_owner = true
text = "Connect"
textPos = NodePath("Marker2D")
colShape = NodePath("CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableArea"]
shape = SubResource("RectangleShape2D_vnoj7")

[node name="Marker2D" type="Marker2D" parent="InteractableArea"]
position = Vector2(0, 6)

[node name="Platform" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="PlatformShape" type="CollisionPolygon2D" parent="Platform"]
polygon = PackedVector2Array(-6, 2, 6, 2, 4, 0, -4, 0)
disabled = true
one_way_collision = true

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
color = Color(0.137255, 0.137255, 0.137255, 1)
energy = 0.0
texture = SubResource("GradientTexture2D_vnoj7")
texture_scale = 0.01

[node name="GreenLight1" type="PointLight2D" parent="."]
position = Vector2(0, -6.375)
scale = Vector2(1, 0.261719)
color = Color(0, 0.0784314, 0, 1)
energy = 0.0
texture = SubResource("GradientTexture2D_ebs5g")

[node name="GreenLight2" type="PointLight2D" parent="."]
position = Vector2(0, -17)
scale = Vector2(1, 0.261719)
color = Color(0, 0.0784314, 0, 1)
energy = 0.0
texture = SubResource("GradientTexture2D_ebs5g")

[node name="SpawnLocation" type="Marker2D" parent="."]
position = Vector2(0, -2)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="onInteract" from="InteractableArea" to="." method="_on_interactable_area_on_interact"]
